--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,20 @@
   text-align: center;
 }
 
+nav {
+  font-family: 'Rubik', sans-serif !important;
+}
+
+/* Bon Vivant für Überschriften */
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Bon Vivant', serif !important;
+}
+
+/* Karla für Paragraphen und Buttons */
+p, button {
+  font-family: 'Karla', sans-serif !important;
+}
+
 
 .logo {
   height: 6em;
