--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,14 @@
   text-align: center;
 }
 
-nav {
+ h3 {
   font-family: 'Rubik', sans-serif !important;
 }
 
+
+
 /* Bon Vivant für Überschriften */
-h1, h2, h3, h4, h5, h6 {
+h1, h2,  h4, h5, h6 {
   font-family: 'Bon Vivant', serif !important;
 }
 
